[gd_scene load_steps=34 format=3 uid="uid://c4gscsf85ohu4"]

[ext_resource type="Script" uid="uid://raqwhy26vr3r" path="res://scripts/player.gd" id="1_v6fml"]
[ext_resource type="Texture2D" uid="uid://boewvvl6tdewu" path="res://assets/sprites/CalicoKitty/calicoKitty_walk.png" id="2_3li8b"]
[ext_resource type="PackedScene" uid="uid://151p2wp14a3p" path="res://scenes/pickable_object.tscn" id="2_mdl7e"]
[ext_resource type="Texture2D" uid="uid://c7h5ukpdxlmov" path="res://assets/sprites/CalicoKitty/calicoKitty_curiousIdleBreaker.png" id="2_v6fml"]

[sub_resource type="CircleShape2D" id="CircleShape2D_mdl7e"]
radius = 21.2132

[sub_resource type="Animation" id="Animation_70d11"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Pivot/Sprite2D:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("2_3li8b")]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Pivot/Sprite2D:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [8]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Pivot/Sprite2D:hframes")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [4]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Pivot/Sprite2D:vframes")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [4]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("Pivot/AnimationPlayer:speed_scale")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.65]
}

[sub_resource type="Animation" id="Animation_3li8b"]
resource_name = "downwards_walk"
loop_mode = 1
step = 0.25
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Pivot/Sprite2D:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [ExtResource("2_3li8b"), ExtResource("2_3li8b")]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Pivot/Sprite2D:hframes")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [4, 4]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Pivot/Sprite2D:vframes")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [4, 4]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Pivot/Sprite2D:frame")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0, 0.25, 0.5, 0.75, 1),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 0]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("Pivot/AnimationPlayer:speed_scale")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [2.0, 2.0]
}

[sub_resource type="Animation" id="Animation_qu4a1"]
resource_name = "horizontal_walk"
loop_mode = 1
step = 0.25
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Pivot/Sprite2D:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.253964, 0.505152, 0.75634, 0.999201),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1),
"update": 1,
"values": [ExtResource("2_3li8b"), ExtResource("2_3li8b"), ExtResource("2_3li8b"), ExtResource("2_3li8b"), ExtResource("2_3li8b")]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Pivot/Sprite2D:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.25, 0.5, 0.75, 1),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1),
"update": 1,
"values": [8, 9, 10, 11, 8]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Pivot/Sprite2D:hframes")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [4, 4]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Pivot/Sprite2D:vframes")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [4, 4]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("Pivot/AnimationPlayer:speed_scale")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [2.0, 2.0]
}

[sub_resource type="Animation" id="Animation_cw2d6"]
resource_name = "idle"
loop_mode = 1
step = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Pivot/Sprite2D:texture")
tracks/0/interp = 0
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [ExtResource("2_v6fml"), ExtResource("2_v6fml")]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Pivot/Sprite2D:hframes")
tracks/1/interp = 0
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [5, 5]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Pivot/Sprite2D:vframes")
tracks/2/interp = 0
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [2, 2]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Pivot/Sprite2D:frame")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8, 0.9, 1),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 4, 5, 6, 7, 8, 9, 0]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("Pivot/AnimationPlayer:speed_scale")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [0.65, 0.65]
}

[sub_resource type="Animation" id="Animation_khinc"]
resource_name = "upwards_walk"
loop_mode = 1
step = 0.25
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Pivot/Sprite2D:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("2_3li8b")]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Pivot/Sprite2D:hframes")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [4]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Pivot/Sprite2D:vframes")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [4]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Pivot/Sprite2D:frame")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0, 0.25, 0.5, 0.75, 1),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1),
"update": 1,
"values": [4, 5, 6, 7, 4]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("Pivot/AnimationPlayer:speed_scale")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [2.0, 2.0]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_bruh7"]
_data = {
&"RESET": SubResource("Animation_70d11"),
&"downwards_walk": SubResource("Animation_3li8b"),
&"horizontal_walk": SubResource("Animation_qu4a1"),
&"idle": SubResource("Animation_cw2d6"),
&"upwards_walk": SubResource("Animation_khinc")
}

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_mdl7e"]
animation = &"downwards_walk"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_qu4a1"]
animation = &"horizontal_walk"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_70d11"]
animation = &"idle"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_cw2d6"]
animation = &"upwards_walk"

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_khinc"]
advance_mode = 2

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_bruh7"]

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_6eyey"]

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_d3wef"]

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_o4126"]

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_lkdrv"]

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_p7iby"]

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_0rnld"]

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_srp4u"]

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_jfpux"]

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_61ith"]

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_ebwui"]

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_sfy4j"]

[sub_resource type="AnimationNodeStateMachine" id="AnimationNodeStateMachine_gv3ic"]
states/Start/position = Vector2(198, 100)
states/downwards_walk/node = SubResource("AnimationNodeAnimation_mdl7e")
states/downwards_walk/position = Vector2(556, 214)
states/horizontal_walk/node = SubResource("AnimationNodeAnimation_qu4a1")
states/horizontal_walk/position = Vector2(729, 95)
states/idle/node = SubResource("AnimationNodeAnimation_70d11")
states/idle/position = Vector2(355, 100)
states/upwards_walk/node = SubResource("AnimationNodeAnimation_cw2d6")
states/upwards_walk/position = Vector2(545, -17)
transitions = ["Start", "idle", SubResource("AnimationNodeStateMachineTransition_khinc"), "upwards_walk", "idle", SubResource("AnimationNodeStateMachineTransition_bruh7"), "idle", "upwards_walk", SubResource("AnimationNodeStateMachineTransition_6eyey"), "horizontal_walk", "idle", SubResource("AnimationNodeStateMachineTransition_d3wef"), "idle", "horizontal_walk", SubResource("AnimationNodeStateMachineTransition_o4126"), "horizontal_walk", "upwards_walk", SubResource("AnimationNodeStateMachineTransition_lkdrv"), "upwards_walk", "horizontal_walk", SubResource("AnimationNodeStateMachineTransition_p7iby"), "idle", "downwards_walk", SubResource("AnimationNodeStateMachineTransition_0rnld"), "downwards_walk", "idle", SubResource("AnimationNodeStateMachineTransition_srp4u"), "downwards_walk", "horizontal_walk", SubResource("AnimationNodeStateMachineTransition_jfpux"), "horizontal_walk", "downwards_walk", SubResource("AnimationNodeStateMachineTransition_61ith"), "upwards_walk", "downwards_walk", SubResource("AnimationNodeStateMachineTransition_ebwui"), "downwards_walk", "upwards_walk", SubResource("AnimationNodeStateMachineTransition_sfy4j")]
graph_offset = Vector2(-126, -14)

[sub_resource type="CircleShape2D" id="CircleShape2D_3li8b"]
radius = 50.0

[sub_resource type="CircleShape2D" id="CircleShape2D_qu4a1"]
radius = 22.0

[sub_resource type="CircleShape2D" id="CircleShape2D_70d11"]
radius = 22.0

[sub_resource type="CircleShape2D" id="CircleShape2D_cw2d6"]
radius = 22.0

[node name="Player" type="CharacterBody2D"]
y_sort_enabled = true
motion_mode = 1
wall_min_slide_angle = 0.122173
safe_margin = 0.1
script = ExtResource("1_v6fml")
pickable_object_scene = ExtResource("2_mdl7e")

[node name="Label" type="Label" parent="."]
z_index = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -33.0
offset_top = -115.0
offset_right = 39.0
offset_bottom = -80.0
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 25
text = "Name"
horizontal_alignment = 1
vertical_alignment = 1

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
z_index = 1
shape = SubResource("CircleShape2D_mdl7e")

[node name="Pivot" type="Node2D" parent="."]

[node name="Sprite2D" type="Sprite2D" parent="Pivot"]
position = Vector2(0, -28)
scale = Vector2(2, 2)
texture = ExtResource("2_3li8b")
hframes = 4
vframes = 4
frame = 7

[node name="AnimationPlayer" type="AnimationPlayer" parent="Pivot"]
root_node = NodePath("../..")
libraries = {
&"": SubResource("AnimationLibrary_bruh7")
}
speed_scale = 0.65

[node name="AnimationTree" type="AnimationTree" parent="Pivot"]
root_node = NodePath("../..")
tree_root = SubResource("AnimationNodeStateMachine_gv3ic")
anim_player = NodePath("../AnimationPlayer")

[node name="ItemPickupArea" type="Area2D" parent="."]
z_index = 1
collision_layer = 0
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="ItemPickupArea"]
shape = SubResource("CircleShape2D_3li8b")

[node name="ToolInteractionArea" type="Area2D" parent="."]
z_index = 1
collision_layer = 0
collision_mask = 4

[node name="CollisionShape2D" type="CollisionShape2D" parent="ToolInteractionArea"]
shape = SubResource("CircleShape2D_3li8b")

[node name="SourceInteractionArea" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 8

[node name="CollisionShape2D" type="CollisionShape2D" parent="SourceInteractionArea"]
shape = SubResource("CircleShape2D_qu4a1")

[node name="CustomerInteractionArea" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 16

[node name="CollisionShape2D" type="CollisionShape2D" parent="CustomerInteractionArea"]
shape = SubResource("CircleShape2D_70d11")

[node name="BookInteractionArea" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 32

[node name="CollisionShape2D" type="CollisionShape2D" parent="BookInteractionArea"]
shape = SubResource("CircleShape2D_cw2d6")

[node name="PickUpMarkers" type="Node2D" parent="."]

[node name="MarkerDown" type="Marker2D" parent="PickUpMarkers"]
position = Vector2(0, 50)

[node name="MarkerRight" type="Marker2D" parent="PickUpMarkers"]
position = Vector2(50, 0)

[node name="MarkerUp" type="Marker2D" parent="PickUpMarkers"]
position = Vector2(0, -50)

[node name="MarkerLeft" type="Marker2D" parent="PickUpMarkers"]
position = Vector2(-50, 0)

[node name="EffectTimer" type="Timer" parent="."]
